--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,14 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'ubuntu-latest'
+ variables:
+  buildConfiguration: 'Release'
+  
+ steps:
+ - task: UseDotNet@2
+ - script: dotnet build --configuration $(buildConfiguration)
+   displayName: 'dotnet build $(buildConfiguration)'
+ 
 
 
